# 3d22Assigments

./: CMakeLists.txt  README.md
house/: CMakeLists.txt  main.cpp
house/shaders/: fragShader.frag  vertShader.vert
